<resources>
    <string name="app_name">EddystoneTest</string>
    <string name="beacon_id">Beacon ID</string>
    <string name="url">URL</string>
    <string name="voltage">Voltage</string>
    <string name="temperature">Temperature</string>
    <string name="distance">Distance</string>
    <string name="url_textview" translatable="false">%s</string>
    <string name="voltage_textview" translatable="false">%s mV</string>
    <string name="temperature_textview" translatable="false">%s °C</string>
    <string name="distance_textview" translatable="false">%s m</string>
    <string name="beacon_id_textview" translatable="false">%s</string>
    <string name="start_scan">Start Scan</string>
    <string name="stop_scan">Stop Scan</string>
</resources>